--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "msw": "^0.41.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
